# py-rl-scheduler

./: .gitignore  CONTRIBUTING.md  Cargo.toml  README.md  pyproject.toml  ray_igw_router.py
.github/workflows/: main.yml
backend/: custom_engine.py
configs/: ray_service.yaml  stable_service.yaml
datalayer/rayserve/: engine.py
datalayer/verl/: datastore.py  metrics.py
integration/rayserve/: router.py
integration/verl/: README.md  verl_hook.py
integration/verl/examples/: Dockerfile.verl.ray  run_qwen2_5-32b_math.sh  runtime-env.yaml  scheduler.yaml  verl-inference-scheduler.yaml
scheduling/: __init__.py  plugins.py  prefix_plugin.py  ray_request_scheduler.py  registry.py  round_robin_plugin.py  scheduler.py  scheduler_config.py  types.py
scheduling/core/: __init__.py  config.py  scheduler.py
scheduling/framework/: __init__.py  helpers.py  interface.py  registry.py  types.py
scheduling/plugins/: __init__.py
scheduling/plugins/handlers/: generic.py
scheduling/plugins/pickers/: generic.py
scheduling/plugins/scorers/: backpressure.py  generic.py  prefix_plugin.py
src/: interface.rs  lib.rs  scheduler.rs  types.rs
tests/: __init__.py  test_kv_cache.py  test_least_queue.py  test_prefix_plugin.py  test_queue_scorer.py  test_registry.py  test_round_robin.py  test_running_requests.py  test_scheduler.py  test_waiting_requests.py
tests/unit/core/: test_scheduler.py
tests/unit/framework/: test_registry.py
tests/unit/plugins/scorers/: test_kv_cache.py  test_least_queue.py  test_prefix_plugin.py  test_queue_scorer.py  test_round_robin.py  test_running_requests.py  test_waiting_requests.py
