[package]
name = "scheduling-rust"
version = "0.1.0"
edition = "2021"

[lib]
name = "_scheduling"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.23", features = ["extension-module"] }
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
pythonize = "0.23"
chrono = "0.4"
